[ADD] example data

--- a/animedbapp/config.yaml
+++ b/animedbapp/config.yaml
@@ -45,3 +45,20 @@ jwt:
   algorithm: HS256
 jsapps:
   +admin: guillotina:static/executioner
+
+logging: 
+  version: 1
+  formatters:
+    default:
+      format: "%(asctime)s %(levelname)-8s %(name)-15s %(message)s"
+      datefmt: "%Y-%m-%d %H:%M:%S"
+  handlers: 
+    default:
+      class: logging.StreamHandler
+      level: DEBUG
+  loggers: 
+    guillotina: 
+      level: DEBUG
+      handlers:
+        - default 
+      propagate: 1      
